# ffi

./: Cargo.toml  README.md  build.rs
ansic/: CMakeLists.txt
ansic/include/: simplemath.h
ansic/src/: simplemath.c
src/: binding.rs  main.rs
